--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </header>
             <section id="tribute-info">
                 <div class="info-left">
-                    <img class="image" src="/Users/this_is_mjk/web_dev/projects/p2_myprofile/profilepic.JPG">
+                    <img class="image" src="profilepic.JPG">
                     <div class="bio">
                         <h1>Myself Manas jain kuniya</h1>
                         <list class="list">
